# Full-stack-Car-Website

./: .gitignore  README.md
backend/: manage.py  pyproject.toml  requirements.txt
backend/api/: serializers.py  urls.py  views.py
backend/cars/: admin.py  models.py
backend/cars/migrations/: 0001_initial.py  0002_alter_car_options_car_color_car_condition_and_more.py  0003_car_image.py  0004_remove_car_image_alter_car_color_alter_car_condition_and_more.py  0005_countrystock.py  0006_remove_car_location_car_country.py  0007_alter_car_condition_alter_car_fuel_type_and_more.py
backend/japan_auto_exchange/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/cars/: CarCard.tsx  CarFilter.tsx  CarGallery.tsx
frontend/src/components/dashboard/: DashboardSidebar.tsx
frontend/src/components/home/: CountryStockSection.tsx  FeaturedCarsSlider.tsx  HeroSlider.tsx  SearchBar.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  SearchOverlay.tsx
frontend/src/data/: cars.ts
frontend/src/layouts/: DashboardLayout.tsx  MainLayout.tsx
frontend/src/pages/: About.tsx  CarDetails.tsx  Cars.tsx  Contact.tsx  Dashboard.tsx  Home.tsx  Login.tsx  NotFound.tsx  Services.tsx  Signup.tsx
frontend/src/services/: api.ts
frontend/src/types/: car.ts
frontend/src/utils/: carAdapter.ts  cn.ts
